# depthwise_color_constancy

./: .gitignore  CMakeLists.txt  Cargo.toml  DepthColorConsistency.cu  README.md  build.rs  interpolation.ipynb  main.cpp  main.py  makefile  nyc_process.ipynb  pyproject.toml  realsenseDataCollection.ipynb  test.ipynb  test_kernal_unwrap.ipynb
demo/: nyc_mvp.ipynb  nyc_process.ipynb  nyc_process.py  pyproject.toml
depthwise_color_consistency/: Cargo.toml  build.rs
depthwise_color_consistency/include/: depthwise_color_consistency.hpp
depthwise_color_consistency/src/: depthwise_color_consistency.cu  depthwise_color_consistency.rs  lib.rs
depthwise_color_constancy/: Cargo.toml  build.rs
depthwise_color_constancy/include/: depthwise_color_constancy.hpp
depthwise_color_constancy/src/: depthwise_color_constancy.cu  lib.rs
include/: depthwise_color_consistency.hpp
py-depthwise_color_consistency/: Cargo.toml  pyproject.toml
py-depthwise_color_consistency/src/: lib.rs
py-depthwise_color_constancy/: Cargo.toml  pyproject.toml
py-depthwise_color_constancy/src/: lib.rs
src/: depthwise_color_consistency.cu
