[workspace]
resolver = "2"
members = [
  "depthwise_color_constancy",
  "py-depthwise_color_constancy"
]
default-members = [
  "depthwise_color_constancy",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
depthwise_color_constancy = { version = "0.1.0", path = "depthwise_color_constancy", default-features = false }
