[package]
name = "depthwise_color_constancy"
version = "0.2.0"
edition = "2021"

[dependencies]
ndarray = "0.16.1"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.16"

[target.'cfg(windows)'.build-dependencies]
winreg = "0.55.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(cuda)'] }
