[package]
name = "py-depthwise_color_consistency"
version = "0.1.0"
edition = "2021"


[lib]
name = "depthwise_color_consistency"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
depthwise_color_consistency = { workspace = true }
numpy = "0.24.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
